# test_project_registry

./: .gitignore  Dockerfile.test  Makefile  README.md  VERSION  alembic.ini  auto_versioning.yaml  pyproject.toml
ci_config/: bandit.yaml  owasp_suppressions.xml  setup.cfg
compose/: docker-compose.yml
data/bg_responses/: stationary_assets_response.json
docker/: Dockerfile  docker-entrypoint.sh
k8s/: ConfigMap.yaml  deployment-service.yaml  deployment.yaml  ingress.yaml  secret.template.yaml
locale/kk/LC_MESSAGES/: messages.po
locale/ru/LC_MESSAGES/: messages.po
src/apps/assets_journal/: container.py  exceptions.py  mappers.py  uow.py
src/apps/assets_journal/domain/: enums.py  exceptions.py
src/apps/assets_journal/interfaces/: emergency_repository_interfaces.py  home_call_repository_interfaces.py  maternity_repository_interfaces.py  newborn_repository_interfaces.py  polyclinic_repository_interfaces.py  sick_leave_repository_interfaces.py  staff_assignment_repository_interface.py  stationary_repository_interfaces.py  uow_interface.py
src/apps/assets_journal/mappers/: emergency_asset_mappers.py  home_call_mappers.py  maternity_asset_mappers.py  newborn_asset_mappers.py  polyclinic_asset_mappers.py  sick_leave_mappers.py  staff_assignment_mappers.py  stationary_asset_mappers.py
src/apps/assets_journal/services/: emergency_asset_service.py  home_call_service.py  maternity_asset_service.py  newborn_asset_service.py  polyclinic_asset_service.py  sick_leave_service.py  staff_assignment_service.py  stationary_asset_service.py
src/apps/catalogs/: container.py  enums.py  exceptions.py  mappers.py
src/apps/catalogs/interfaces/: citizenship_catalog_repository_interface.py  diagnoses_and_patients_repository_interface.py  diagnoses_catalogue_repository_interface.py  financing_sources_catalog_repository_interface.py  identity_documents_repository_interface.py  insurance_info_catalog_repository_interface.py  medical_organizations_catalog_repository_interface.py  nationalities_catalog_repository_interface.py  patient_context_attributes_repository_interface.py
src/apps/catalogs/services/: citizenship_catalog_service.py  diagnoses_catalogue_service.py  financing_sources_catalog_service.py  identity_documents_catalog_service.py  insurance_info_catalog_service.py  medical_organizations_catalog_service.py  (+3 more)
src/apps/medical_staff_journal/: container.py  exceptions.py
src/apps/patients/: container.py  mappers.py  uow.py
src/apps/platform_rules/: container.py  mappers.py
src/apps/registry/: container.py  exceptions.py  mappers.py  uow.py
src/apps/users/: container.py  mappers.py
src/cli/: compile_locales.py
src/core/: __init__.py  core_container.py  entrypoint.py  i18n.py  logger.py  settings.py  utils.py
src/core/database/: config.py
src/core/middlewares/: i18n_middleware.py
src/core/resources/: fastapi_resource.py  httpx_resource.py  kafka_consumer_resource.py  sqlalchemy_resource.py  uvicorn_resource.py
src/shared/: base_uow.py  exception_handlers.py  exceptions.py
src/shared/dependencies/: check_user_permissions.py  resources_map.py
src/shared/helpers/: decorators.py  validation_helpers.py
src/shared/infrastructure/: base.py  mappers.py
src/shared/schemas/: pagination_schemas.py
tests/: fixtures.py
tests/unit/decorators/: test_handle_kafka_event.py
tests/unit/dependencies/: test_check_user_permissions_dependency.py
tests/unit/repositories/: test_appointment_repository.py  test_auth_service_repository.py  test_citizenship_catalog_repository.py  test_diagnoses_and_patients_repository.py  test_diagnoses_catalog_repository.py  test_financing_sources_catalog_repository.py  test_identity_documents_repository.py  test_insurance_info_catalog_repository.py  test_medical_organizatons_catalog_repository.py  test_nationalities_catalog_repository.py  test_patient_context_attribute_repository.py  test_patient_repository.py  test_platform_rules_repository.py  test_rpn_integration_service_repository.py  test_user_repository.py
tests/unit/services/: test_citizenship_catalog_service.py  test_financing_sources_catalog_service.py  test_identity_documents_service.py  test_insurance_info_service.py  test_medical_organizations_catalog_service.py  test_nationalities_catalog_service.py  test_patient_context_attribute_service.py  test_patient_service.py  test_user_service.py
(+238 files in other folders)
