[project]
name = "registry-module-orkendeu-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Igor Ruzhilov",email = "iruzhilov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "dependency-injector (>=4.46.0,<5.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "pytest-mock (>=3.14.0,<4.0.0)",
    "python-gettext (>=5.0,<6.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "psycopg[binary] (>=3.2.6,<4.0.0)",
    "watchfiles (>=1.0.5,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiokafka (>=0.12.0,<0.13.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "auto-versioning-lib (>=0.1.0,<0.2.0)",
    "mis-eventer-lib (>=0.0.3)",
    "pytest-cov (>=6.2.1)",
    "ruff (>=0.12.5,<0.13.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  { include = "src" },
]

[tool.poetry.scripts]
# Locales compilation
compile-locales = "src.cli.compile_locales:main"
auto-versioning = "auto_versioning_lib.cli:main"

[[tool.poetry.source]]
name = "dzhandosoft-pypi"
url = "https://pypi.dzhandosoft.kz/simple/"
priority = "primary"

